Bug 414046 - Remove nsPresShell::GetLayoutObjectFor(), r/sr=roc