editor/libeditor/text/nsPlaintextEditor.h
@@ -173,13 +173,6 @@ protected:
   // Create the event listeners for the editor to install.
   virtual nsresult CreateEventListeners();
 
-  /** returns the layout object (nsIFrame in the real world) for aNode
-    * @param aNode          the content to get a frame for
-    * @param aLayoutObject  the "primary frame" for aNode, if one exists.  May be null
-    * @return NS_OK whether a frame is found or not
-    *         an error if some serious error occurs
-    */
-  NS_IMETHOD GetLayoutObject(nsIDOMNode *aInNode, nsISupports **aOutLayoutObject);
   // Helpers for output routines
   NS_IMETHOD GetAndInitDocEncoder(const nsAString& aFormatType,
                                   PRUint32 aFlags,
